--- a/Faculty Vault/index.html
+++ b/Faculty Vault/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    
     <title>Faculty Vault</title>
 </head>
 <body>
@@ -16,10 +17,10 @@
             <p>Faculty Vault</p>
         </div>
         <ul class="nav-links">
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Customers</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#customer" >Customer</a></li>
+            <li><a href="#team" >Team</a></li>
+            <li><a href="#contactus" >Contact Us</a></li>
         </ul>
         <button class="sign-button" href="#">Sign In</button>
     </nav>
@@ -36,6 +37,27 @@
 
     <button class="sign-inn-button" href="#">Sign In</button>
 
+    <div class="features" id="features">
+        <p></p></div> 
+
+    <nav class="navbar" >
+        <ul class="nav-items">
+          <li><a href="#store" >Store</a></li>
+          <li><a href="#manage">Manage</a></li>
+          <li><a href="#visibility">Visibility</a></li>
+          <li><a href="#security">Security</a></li>
+        </ul>
+      </nav>
+        <div class="store" id="store">
+            <p></p>
+ </div>
+
+ <div class="store1">
+    <p>Storing certificates made simple</p>
+</div>
+<div class="store2">Effortless and secure management for faculty credentials.<br>
+             Store, track, and access your certificates with ease.</div>
     <script src="faculty.js"></script>
+   
 </body>
 </html>
